# trajectory-executor

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: dummy_example.py  genesis_example.py  mujoco_example.py  ruckig_example.py
tests/: test_trajectory_executor.py
trajectory_executor/: robot_arm.py  trajectory_executor.py
